--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
 
+  go_router: ^14.2.7
+
   cached_network_image: ^3.2.0
 
   flutter:
